Updated app name and favicon for vercel redeploy

--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-  <title>React Technical Test</title>
+  <title>NASA Image Search</title>
 </head>
 
 <body>
-  <noscript>React tech test - install Javascript to run.</noscript>
+  <noscript>NASA IMAGE SEARCH - install Javascript to run.</noscript>
   <div id="root"></div>
 
 </body>
